# expenseApp

./: .gitignore  .pre-commit-config.yaml  PROJECT_SCOPE.md  README.md  To-Do.md  conftest.py  database_example.ipynb  docker-compose.yaml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  task.md
DOCS/: use_cases.drawio
Expense Tracking App/: config.py  database.py  schemas.py
auth/: model.py  oauth2.py
db/: database.py
db/schemas/: _category_schema.py  _expense_schema.py
migrations/: env.py
migrations/versions/: 240f0315ae98_.py  28b088061135_initial_migration.py  ae05d31ce48d_add_role_column_to_user.py
src/: config.py  exceptions.py  main.py  models.py
src/auth/: oauth2.py  routes.py  schemas.py  service.py
src/auth/tests/: test_auth_service.py  test_auth_view.py
src/common/: alembic_utils.py  base_service.py  base_service_usage_example.ipynb
src/db/: __init__.py  config.py  database.py
src/db/schemas/: __init__.py  _budget_schema.py  _user_schema.py
src/domain/budget/: routes.py  schemas.py  service.py
src/domain/budget/tests/: test_budget_routes.py  test_budget_service.py
src/domain/category/: routes.py  schemas.py  service.py
src/domain/category/tests/: test_category_routes.py  test_category_service.py
src/domain/expense/: routes.py  schemas.py  service.py
src/domain/expense/tests/: test_expense_routes.py  test_expense_service.py
src/errors/: expense.py  main.py
